--- a/0506082v2/0506082-charter.tex
+++ b/0506082v2/0506082-charter.tex
@@ -4,6 +4,7 @@
 
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{enumitem}
 
 \usepackage[colorlinks=true
 ,urlcolor=blue
@@ -25,10 +26,10 @@ bookmarksopenlevel=10
 \usepackage[charter,vvarbb,scaled=1.07]{newtxmath}
 \usepackage[cal=boondoxo]{mathalfa}
 \linespread{1.05}
-\usepackage[letterpaper, margin=1.2in]{geometry}
-
-
-\tolerance=1000
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\usepackage[small]{titlesec}
 
 \newtheorem{Definition}{Definition}
 \newtheorem{Lemma}{Lemma}
@@ -408,10 +409,11 @@ only ``relative" or ``perspectival" existence.
 \end{enumerate}
 An example of a position that our modern understanding of the measurement problem\footnote{See the books cited in footnote \ref{QMtexts}, 
 especially Mittelstaedt (2004).}  has rendered internally inconsistent is: 
-\begin{quote}
-3.  Quantum theory is fundamental and universally valid, and (yet) the classical world exists absolutely.
-\end{quote}
+\begin{enumerate}[resume]
+  \item Quantum theory is fundamental and universally valid, and (yet) the classical world exists absolutely.
+\end{enumerate}
 
+\noindent
 In some sense stance 1 originates with Heisenberg (1927), but the modern era started with
 Everett (1957).\footnote{\label{MWM} Note, though,  that stance 1 by no means implies the so-called  Many-Worlds Interpretation, which also in our opinion is `simply a meaningless collage of words' (Leggett, 2002).} These days, most decoherence theorists, consistent historians,
 and modal interpreters seem to support it. Stance 2 has a long and respectable pedigree unequivocally, including among others Einstein, Schr\"{o}dinger, and Bell. More recent backing has come from  Leggett as well as from ``spontaneous collapse" theorists such as Pearle, Ghirardi, Rimini, Weber, and others.
