--- a/1601.02794/Bohrv2.tex
+++ b/1601.02794/Bohrv2.tex
@@ -16,15 +16,21 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 %\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
+\input{Bohrificationpreamble.tex}
+
+\usepackage{charter}% lining figures in math, osf in text
+\usepackage[scaled=1.04,varqu,varl]{inconsolata}% inconsolata typewriter
+\usepackage[type1]{cabin}% sans serif
+\usepackage[charter,vvarbb,scaled=1.07]{newtxmath}
+\usepackage[cal=boondoxo]{mathalfa}
+\linespread{1.05}
+\usepackage[papersize={6.7in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
+
 \date{January 14, 2016}
  
-\input{Bohrificationpreamble.tex}
 \newcommand{\mmp}{measurement problem}
 \newtheorem{Definition}{Definition}[section]
 \newtheorem{Lemma}[Definition]{Lemma}
@@ -32,8 +38,6 @@ bookmarksopenlevel=10
 \newtheorem{Proposition}[Definition]{Proposition}
 \newtheorem{Example}[Definition]{Example}
 \newtheorem{Corollary}[Definition]{Corollary}
-\topmargin = - 1 cm \textheight = 23 cm \textwidth = 15 cm
-\oddsidemargin = 0.9 cm \evensidemargin = 0.9 cm
 \begin{document} 
 \pagenumbering{arabic} \setlength{\unitlength}{1cm}\cleardoublepage
 \thispagestyle{empty}
@@ -891,7 +895,7 @@ Berlin: Springer--Verlag. Transl.\ \emph{Mathematical Foundations of Quantum Mec
 \item Schlosshauer, M. (2007). \emph{Decoherence and the Quantum-to-Classical Transition}. Berlin: Springer. 
 \item  Schr\"{o}dinger, E. (1935). Die gegenw\"{a}rtige Situation in der Quantenmechanik. \emph{Die Naturwissenschaften} 23, 807--812, 823--828, 844--849.
 \item Seevinck, M.P. (2012). Challenging the gospel:
-Grete Hermann on von Neumann's no-hidden-variables proof. Slides available at
+Grete Hermann on von Neumann's no-hidden-variables proof. Slides available at \hfil\break
 \verb#http://mpseevinck.ruhosting.nl/seevinck/Aberdeen_Grete_Hermann2.pdf#.
 \item   Sewell, G.L. (2005).  On the mathematical structure of quantum measurement theory.
 \texttt{arXiv:math-ph/0505032v2}.
@@ -901,7 +905,7 @@ Semiclassical analysis of low lying eigenvalues. IV. The flea on the elephant.  
 \item  Spehner, D., Haake,  F. (2008). Quantum measurements without macroscopic superpositions.
 \emph{Physical Review A}  77, 052114.
  \item Stevens, M. (2015). \emph{The Kadison--Singer Property}. MSc Thesis, Radboud University Nijmegen. 
- \item Tao, T. (2013). Real stable polynomials and the Kadison-Singer problem. 
+ \item Tao, T. (2013). Real stable polynomials and the Kadison-Singer problem. \hfil\break
 \texttt{http://terrytao.wordpress.com/}\\ \texttt{2013/11/04/real-stable-polynomials-and-the-kadison-singer-problem/}.
 \item  Van Wesep, R.A. (2006).  Many worlds and the appearance of probability in quantum mechanics.
  \emph{Annals of Physics (N.Y.)} 321, 2438--2452. 
