--- a/1604.01471/swap_v4.tex
+++ b/1604.01471/swap_v4.tex
@@ -35,7 +35,7 @@ bookmarksopenlevel=10
 %\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
-\usepackage[letterpaper, margin=1.3in]{geometry}
+%\usepackage[letterpaper, margin=1.3in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
 
@@ -320,7 +320,7 @@ We note that the correlation established between system and ancilla states in Eq
 
 \noindent {\bf 2. Null Schmidt coefficients:} A second candidate \qo{untested premise} so appeals to the intuition that it is easily overlooked. When represented in its Schmidt form, $|\psi\rangle = \sum_i c_i |s_i\rangle|\varepsilon_i\rangle$, a general bipartite quantum state contains kets $|s_k\rangle|\varepsilon_k\rangle$ for which the associated coefficients $c_k$ are equal to zero. Indeed, this is precisely the case for the state displayed in Eq.~(\ref{eq:PreMeasurement}), where, we have $c_1=c_2=1/\sqrt{2}$, $c_k=0$ for $k\geq3$. A careful reading of the derivation presented in the main text will reveal an additional tacit premise required by the BPR argument: states with null Schmidt coefficients were taken to be physically inadmissible, \textit{i.e.} $c_k=0$ was taken to indicate that the state $|s_k\rangle$ could never be observed upon measurement. This premise was called upon implicitly when it was suggested that the Born rule was satisfied by the relation ${\cal P}\left(|s_1\rangle {\Big |} |\psi_{\cal SE} \rangle \right)={\cal P}\left(|s_2\rangle {\Big |} |\psi_{\cal SE} \rangle \right)$, as it leads to the conclusion that ${\cal P}\left(|s_1\rangle {\Big |} |\psi_{\cal SE} \rangle \right)+{\cal P}\left(|s_2\rangle {\Big |} |\psi_{\cal SE} \rangle \right)=1$, from which the BPR follows. But to take the case $c_k=0$ to indicate the impossibility of observing outcome $|s_k\rangle$ is to assume, if only to a very limited degree, the Born rule \textit{a priori}. Should one conclude, then, that an additional premise ought to be tested in order to fully support the BPR derivation provided in the text?
 %
-
+\sloppy
 Fortunately, the physical inadmissibility of states with null Schmidt coefficients has already been shown~\cite{zurek:08} to follow from the premises already tested during this experiment. In particular, arguments on envariance can be used to demonstrate that any envariantly swappable pair of states in the Schmidt representation of a bipartite quantum state must be equiprobable. For instance, if there exist $N$ terms in the Schmidt decomposition of a state $|\psi\rangle$ for which the associated prefactors $c_k=\alpha$, with $k=1,2,...,N$, one finds that
 %
 \begin{eqnarray}\label{eq:nullschmidt1}
