--- a/1801.09305/1801.09305.tex
+++ b/1801.09305/1801.09305.tex
@@ -1,7 +1,29 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 \setlength{\unitlength}{1cm}
 \usepackage{bbold}
 \usepackage{amsmath}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[small]{titlesec}
+\tolerance=2000
+\hbadness 2000
 \begin{document}
 %\setcitestyle{semicolon,aysep={}}
 \date{}
@@ -31,7 +53,6 @@ The picture that emerges from these quotations, and from many similar passages t
 Against this well-entrenched account, the present paper argues that the actual history was considerably less simple. As we shall show, Bell, Mermin and others probably misunderstood and certainly misrepresented von Neumann's proof, which is valid and sensible---in this assessment we elaborate on a recent paper by Jeffrey Bub \cite{bub}. Moreover, Bell and other commentators did not give a correct account of the conclusion von Neumann drew from his proof: von Neumann never claimed to have excluded \emph{all possible} hidden variables, but only those that could fit in a quantum kinematical framework. Further, we argue that Grete Hermann's work, although interesting both historically and philosophically, did not succeed in coming to grips with von Neumann's proof either. Interestingly, Hermann's technical objections are in their details rather different from Bell's although---as I shall argue---equally misdirected. Moreover, her argumentation was not of the kind that can be expected to have caught the attention of the physics community, and this will have been an important factor in the poor reception of her work.
 
 Finally, we review some contemporary observations (from the nineteen-fifties) on how von Neumann's proof relates to the hidden-variables theories of Bohm and de Broglie. As will become clear, both major Copenhagenists and prominent hidden variables proponents understood what had actually been proved by von Neumann. If anything, it appears that a clear rhetorical use of von Neumann's result was first of all made by \emph{opponents} of Copenhagen, who used the alleged obvious fallacy in the proof to cast doubt on the scientific judgment of the Copenhagen circle (or clique), thus discrediting the Copenhagen interpretation itself by implication.
-
 
 \section{The plan of von Neumann's book: The Quantum Paradigm}\label{book}
 
