--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,45 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-17 16:43:21 -0400 
+%% Created for Pete Su at 2019-08-17 21:13:12 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Myrvold2003,
+	Abstract = {Recent literature on Bohm's alternative to mainstream quantum mechanics may create the misleading impression that, except for perfunctory dismissals, the theory was ignored by the physics community in the years immediately following its proposal. As a matter of fact, Einstein, Pauli, and Heisenberg all published criticisms of Bohm's theory, explaining their reasons for not accepting the theory. These criticisms will be discussed and evaluated in this article. [ABSTRACT FROM AUTHOR]},
+	Author = {Myrvold, Wayne C.},
+	Date-Added = {2019-08-17 21:12:13 -0400},
+	Date-Modified = {2019-08-17 21:13:12 -0400},
+	Issn = {02698595},
+	Journal = {International Studies in the Philosophy of Science},
+	Keywords = {QUANTUM theory, PHYSICS, BOHM, David, 1917-1992},
+	Number = {1},
+	Pages = {7-24},
+	Title = {{On some early objections to Bohm's theory.}},
+	Url = {http://search.ebscohost.com.proxy.library.cmu.edu/login.aspx?direct=true&db=rlh&AN=10182223&site=ehost-live},
+	Volume = {17},
+	Year = {2003},
+	Bdsk-Url-1 = {http://search.ebscohost.com.proxy.library.cmu.edu/login.aspx?direct=true&db=rlh&AN=10182223&site=ehost-live}}
+
+@article{Bub2010,
+	Author = {Jeffrey Bub},
+	Date-Added = {2019-08-17 17:24:39 -0400},
+	Date-Modified = {2019-08-17 17:25:24 -0400},
+	Doi = {10.1007/s10701-010-9480-9},
+	Journal = {Foundations of Physics},
+	Month = jun,
+	Note = {\href{https://arxiv.org/abs/1006.0499}{arXiv:1006.0499}},
+	Number = {9-10},
+	Pages = {1333--1340},
+	Publisher = {Springer Science and Business Media {LLC}},
+	Title = {{Von Neumann's `No Hidden Variables' Proof: A~Re-Appraisal}},
+	Url = {https://doi.org/10.1007/s10701-010-9480-9},
+	Volume = {40},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s10701-010-9480-9}}
 
 @article{Dieks2017,
 	Abstract = {According to what has become a standard history of quantum mechanics, in 1932 von Neumann persuaded the physics community that hidden variables are impossible as a matter of principle, after which leading proponents of the Copenhagen interpretation put the situation to good use by arguing that the completeness of quantum mechanics was undeniable. This state of affairs lasted, so the story continues, until Bell in 1966 exposed von Neumann's proof as obviously wrong. The realization that von Neumann's proof was fallacious then rehabilitated hidden variables and made serious foundational research possible again. It is often added in recent accounts that von Neumann's error had been spotted almost immediately by Grete Hermann, but that her discovery was of no effect due to the dominant Copenhagen Zeitgeist. We shall attempt to tell a story that is more historically accurate and less ideologically charged. Most importantly, von Neumann never claimed to have shown the impossibility of hidden variables tout court, but argued that hidden-variable theories must possess a structure that deviates fundamentally from that of quantum mechanics. Both Hermann and Bell appear to have missed this point; moreover, both raised unjustified technical objections to the proof. Von Neumann's argument was basically that hidden-variables schemes must violate the ``quantum principle'' that physical quantities are to be represented by operators in a Hilbert space. As a consequence, hidden-variables schemes, though possible in principle, necessarily exhibit a certain kind of contextuality. As we shall illustrate, early reactions to Bohm's theory are in agreement with this account. Leading physicists pointed out that Bohm's theory has the strange feature that pre-existing particle properties do not generally reveal themselves in measurements, in accordance with von Neumann's result. They did not conclude that the ``impossible was done'' and that von Neumann had been shown wrong.},
