--- a/gr-qc-9703089/gr-qc-9703089.tex
+++ b/gr-qc-9703089/gr-qc-9703089.tex
@@ -3,7 +3,7 @@
 %
 %                       Adrian Kent 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentstyle[preprint,aps,pra]{revtex}
+\documentclass[aps,pra,12pt]{revtex4}
 %defs
 \def\BRA#1{\left\langle #1\right|}
 \def\KET#1{\left| #1\right\rangle}
@@ -12,6 +12,30 @@
 \def\braket#1#2{\langle \, #1 \, | \, #2 \, \rangle}
 \def\norm#1{\left\Vert \, #1 \, \right\Vert}
 \def\inprod#1#2{\langle \, #1 \, , \, #2 \, \rangle}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
 \begin{document}
 \title{Against Many-Worlds Interpretations}
 \author{Adrian Kent\thanks{Present address: DAMTP, University of
@@ -19,9 +43,7 @@
 Email: apak@damtp.cam.ac.uk}}
 \address{The Institute for Advanced Study, School of Natural Sciences,\\
 Princeton, New Jersey 08540, USA}
-\maketitle
 \begin{abstract}
-\noindent
 This is a critical review of the literature on many-worlds interpretations 
 (MWI), with arguments drawn partly from earlier critiques by Bell and Stein.
 The essential postulates involved in various MWI
@@ -36,11 +58,14 @@ nor would be useful in constructing new MWI.
 Comments are made on papers by Geroch and Deutsch that advocate MWI.
 It is concluded that no plausible set of axioms exists for an MWI that
 describes known physics.
-\vfill
+
 Int. J. Mod. Phys. A {\bf 5} 1745-1762 (1990)
 \end{abstract} 
-\eject
+
+\maketitle
+
 \centerline{\bf Foreword to archive version}
+\vskip 10pt
 
 Though this paper was written in 1989, I thought it worth 
 putting it on the archive now, since the debate to which it contributes is 
@@ -134,7 +159,12 @@ in the context of quantum cosmology, by Gell-Mann and Hartle.
 As noted above, that approach too has run into serious problems, 
 discussed in some detail in Refs. [F9-F13]. 
 
+\vskip 10pt
+
 \centerline{\bf Foreword references}
+
+\vskip 10pt
+
 
 \begin{description}
 \item{[F1]} Refs. [1] and [19] below. 
@@ -893,7 +923,7 @@ describes the proportion of subsystems in the eigenstate
 $\ket{\theta_i}$, and $p_i = | <~\theta_i ~,~ \psi ~> |^2$.
 
 In summary, one knows from empirical evidence that the probability of
-obtaining the result $\theta_i$ from a measurement of ${\em O}$ on the
+obtaining the result $\theta_i$ from a measurement of ${\textit O}$ on the
 state $\ket{\psi}$ is $p_i$.  FGG have clearly shown that this number
 can in principle be {\em calculated} from postulates I-III, I${\rm V}^{\prime}$
 without using the Hilbert space norm.  This is a new and interesting
