--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -18,4 +18,5 @@ bookmarksopenlevel=10
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
+\hbadness=2000
 \usepackage[small]{titlesec}
