--- a/gr-qc-9703089/gr-qc-9703089.tex
+++ b/gr-qc-9703089/gr-qc-9703089.tex
@@ -232,19 +232,19 @@ Thus the aim of this paper is to argue that the literature neither contains
 nor suggests a plausible set of axioms for an MWI that describes
 known physics. 
 Specifically, arguments are presented against
-MWI proposed by Everett,\cite{ev} Graham\cite{gr} and
-DeWitt;\cite{dew} and against the possibility of basing MWI on the
-work of Hartle\cite{har} and Farhi-Goldstone-Gutmann.\cite{fgg} Some
-brief comments, in reply to arguments put forward by Geroch\cite{ger}
-and Deutsch\cite{deutsch} in favour of MWI, are also included.
+MWI proposed by Everett \cite{ev}, Graham \cite{gr} and
+DeWitt \cite{dew}; and against the possibility of basing MWI on the
+work of Hartle \cite{har} and Farhi-Goldstone-Gutmann \cite{fgg}. Some
+brief comments, in reply to arguments put forward by Geroch \cite{ger}
+and Deutsch \cite{deutsch} in favour of MWI, are also included.
 
-The classic criticisms of MWI are Bell's papers.\cite{bell1,bell2}
+The classic criticisms of MWI are Bell's papers \cite{bell1,bell2}.
 Other published arguments against MWI include papers by
-Stein\cite{stein} and Healey,\cite{healey} 
-and comments by Shimony\cite{shim} and Wheeler.\cite{wheel}
+Stein \cite{stein} and Healey \cite{healey}, 
+and comments by Shimony \cite{shim} and Wheeler \cite{wheel}.
 The arguments below against Everett's and DeWitt's MWI 
 draw largely from Bell's discussions, and also make use of 
-Graham's criticism\cite{gr} of Everett's original argument;
+Graham's criticism \cite{gr} of Everett's original argument;
 some of Stein's arguments have also been adopted. 
 Still, we hope that this article may be useful for two reasons.  
 Firstly, we have tried to give a complete and self-contained criticism of 
@@ -298,7 +298,7 @@ justify this from Maxwell's and Einstein's theories, \ldots).
 But, since it is claimed that in a many-worlds interpretation 
 ``the symbols
 of quantum mechanics represent reality just as much as do those of 
-classical mechanics,''\cite{dew} we should at least demand that an MWI 
+classical mechanics,'' \cite{dew} we should at least demand that an MWI 
 be defined to the same level of rigour that classical theories are.) 
 
 The dominant mode of research in current physics emphasizes mathematical
@@ -314,7 +314,7 @@ The reason is that this is crucial in deciding the
 extent to which a theory has 
 been tested, and hence in designing new tests.  
 For example, once it was shown that standard quantum mechanics predicts 
-non-local correlations,\cite{bell0} it became clear that new experiments
+non-local correlations \cite{bell0}, it became clear that new experiments
 were needed to distinguish between the standard theory and local 
 hidden-variable theories. 
 Similarly, the physical community ought to be able to, and ought to, 
@@ -326,7 +326,7 @@ interpretations), then it will presumably be generally agreed that
 precise models ought to be built, and tests designed
 to distinguish these models from the standard theory. 
 (A prototype model has already been 
-suggested by Ghirardi-Rimini-Weber;\cite{grw} it is 
+suggested by Ghirardi-Rimini-Weber \cite{grw}; it is 
 briefly discussed at the end of this paper.) 
 
 After this introduction, the argument proper begins with a brief
@@ -348,21 +348,20 @@ Many-worlds interpretations share two essential characteristics.
 First, they suppose that there exists a definite physical reality,
 which can be put into correspondence with parts of a mathematical
 formalism.  This assumption is necessary if an MWI is to have any
-useful content. It is an assumption made by Everett:\cite{ev} ``This paper
+useful content. It is an assumption made by Everett \cite{ev}: ``This paper
 \ldots postulates that a wave function \ldots supplies a complete
 matehmatical model for every \ldots system without exception.'' and
-still more clearly by DeWitt:\cite{dew} ``The real world \ldots
+still more clearly by DeWitt \cite{dew}: ``The real world \ldots
 is faithfully represented solely by the following collection of 
 mathematical objects. \ldots The use of this word [faithfully] implies
 a return to naive realism and the old-fashioned idea that there can be a 
 direct correspondence between formalism and reality. \ldots The symbols
 of quantum mechanics represent reality just as much as do those of 
-classical mechanics.''\footnote{Actually, DeWitt here seems 
+classical mechanics.'' There seems to be no dispute in the literature on this point: if a theory
+is not mathematically realist then it is not an MWI  \footnote{Actually, DeWitt here seems 
 unnecessarily defensive; mathematical realism need not be naive, and has more 
 or less continuously been advocated by distinguished physicists 
-throughout this century.}
-There seems to be no dispute in the literature on this point: if a theory
-is not mathematically realist then it is not an MWI.
+throughout this century.}.
 
 Second, they base the mathematical formalism on a state-vector
 $\ket{\psi}$ which belongs to a Hilbert space $V$ and has a purely
@@ -389,7 +388,7 @@ specific cases.
 
 \subsection{Everett}
 
-Everett's famous paper\cite{ev} is admirably clear in its claims. 
+Everett's famous paper \cite{ev} is admirably clear in its claims. 
 For Everett, the mathematical formalism is fully described by Axiom $0$. 
 Physical reality is to be entirely encapsulated in the wave function 
 evolution. 
@@ -424,12 +423,12 @@ correlations predicted by quantum mechanics, Everett's MWI is
 inadequate. 
 
 The problem is illustrated by a simple 
-example.\footnote{This example was apparently
-first considered by Graham;\cite{gr} the 
-following analysis combines his criticisms with those of Bell.\cite{bell2}
+example \footnote{This example was apparently
+first considered by Graham \cite{gr};  the 
+following analysis combines his criticisms with those of Bell \cite{bell2}.
 Anandan\cite{anandan} has also briefly mentioned the example, making the 
 parenthetical point of the third criticism below, which he attributes to 
-Aharonov.} 
+Aharonov.} .
 Suppose that a previously polarized 
 spin-$\frac{1}{2}$ particle has just had its 
 spin measured by
@@ -534,7 +533,7 @@ physically irrelevant, when no hypothesis has been made about the
 physical meaning of $\mu$.
 
 (Reference \cite{mwbook} also contains a
-longer exposition\cite{ev2} of Everett's ideas; this doesn't seem to depart 
+longer exposition \cite{ev2} of Everett's ideas; this doesn't seem to depart 
 from Everett's original paper on any point of principle.) 
 
 \subsection{Graham}
@@ -645,9 +644,9 @@ In any case, the proposition that Graham needs to establish is much
 more general than the one he actually considers.  
 Measuring devices are not typically coupled to the
 relative frequency operator; it is more normal to record the results of
-individual observations in sequence.\footnote{This point, in a related context,
+individual observations in sequence \footnote{This point, in a related context,
 is made by Stein\cite{stein} (pp. 641-2).}
-Whether one wants to describe this as
+.Whether one wants to describe this as
 a complex observation by a single measuring device or 
 a sequence of observations of identical systems by different measuring devices
 does not matter. 
@@ -679,12 +678,11 @@ content'' and a ``postulate of complexity''.
 The latter states 
 that ``The world is decomposable into systems and apparata.'', 
 and we take this as meaning that DeWitt would accept 
-Axiom 1G above.\footnote{Although DeWitt suggests his postulates are already 
+Axiom 1G above \footnote{Although DeWitt suggests his postulates are already 
 implicit in Everett's paper,\cite{ev} 
 we agree with Bell\cite{bell2} that
 the postulate of complexity is against the spirit of Everett's 
-prose.}
-However, DeWitt's position on the physical interpretation of the wave
+prose.}. However, DeWitt's position on the physical interpretation of the wave
 function is not clear to us. 
 DeWitt refers to Graham's argument as an improvement on Everett's (see the
 footnote on page 185 of reference \cite{mwbook}), but does not actually 
@@ -714,13 +712,13 @@ analogous problems in some branches of statistical mechanics.
 It does not seem clear that the problems really are analogous,
 but if they were, this of course would be an argument 
 that statistical physics is not well-founded, not an argument that  
-MWI are valid.\footnote{Our rejection of this analogy is essentially 
+MWI are valid \footnote{Our rejection of this analogy is essentially 
 isomorphic to Bell's discussion
-of classical and quantum mechanics on page 125 of reference \cite{bell2}.})
+of classical and quantum mechanics on page 125 of reference \cite{bell2}.}.)
 
 Although DeWitt is unexplicit on the r\^{o}le of the measure, there is
 a formalization which does not seem in conflict with his writings. 
-This formalization is a version of one due to Bell.\cite{bell1,bell2}
+This formalization is a version of one due to Bell \cite{bell1,bell2}.
 Classical variables have replaced the de Broglie-Bohm variables
 in Bell's formalization; we regard this as uglier, but it respects the
 spirit of DeWitt's axiom of complexity. 
@@ -751,11 +749,11 @@ and the set of these worlds has measure $\mu (\psi (r_1 , \ldots , r_N ))$.
 Now it is possible that, with a sufficiently long and careful classification
 of all known measuring devices, these axioms would become consistent
 with known experimental results. 
-(Zurek\cite{zurek} has given a careful discussion of how a preferred basis
+(Zurek \cite{zurek} has given a careful discussion of how a preferred basis
 might be defined by measuring devices.)
 Our reasons for rejecting an MWI of this type --- which appear below for
 completeness, but are identical to those
-given by Bell\cite{bell1,bell2} --- are therefore not strictly
+given by Bell \cite{bell1,bell2} --- are therefore not strictly
 empirical.   
 The first objection is that, 
 precisely because this classification would be needed, the axioms 
@@ -803,9 +801,9 @@ We have failed; we do not think it is possible.
 
 \subsection{Note on Cooper-Van Vechten}
 
-As well as the papers already discussed, DeWitt and Graham's book 
-``The Many-Worlds Interpretation of Quantum Mechanics''\cite{mwbook} 
-contains a paper by Cooper and Van Vechten.\cite{cvv}  
+As well as the papers already discussed, DeWitt and Graham's book \cite{mwbook} 
+``The Many-Worlds Interpretation of Quantum Mechanics''
+contains a paper by Cooper and Van Vechten \cite{cvv}.
 In a footnote, Cooper and Van Vechten explain the difference between
 their interpretation and Everett's.  
 They don't advocate any sort of many-worlds picture, nor do they take  
@@ -1043,10 +1041,11 @@ deciding whether a given MWI is valid.
 
 \subsection{Comments on Geroch and Deutsch}
 
-Some interesting arguments have been put forward by Geroch,\cite{ger}
+Some interesting arguments have been put forward by Geroch \cite{ger}
+,
 in an article intended ``to state the content of, and to some extent to
 advocate'' Everett's interpretation.  
-Deutsch\cite{deutsch} 
+Deutsch \cite{deutsch} 
 has presented thought experiments involving various types of ``quantum 
 parallel processing'', which are intended to make state vector reduction 
 implausible.  We comment briefly on some points raised in these papers.
@@ -1073,7 +1072,7 @@ FGG, were given in the last section as PI-PV. The statement in question
 follows directly from PIV.) 
 Secondly, the notion of preclusion is actually a rather complicated and 
 vaguely defined one. 
-Stein has discussed this at some length in his reply\cite{stein} to Geroch; 
+Stein has discussed this at some length in his reply \cite{stein} to Geroch; 
 we briefly summarize (what we agree with Stein are) the problems.
 Preclusion seems to involve
 a preferred basis (defined by measuring devices, as 
@@ -1123,10 +1122,9 @@ If so, the same response applies here as to earlier analogies: the problem
 of defining or predicting self-awareness is a problem with general relativity;
 it may be a problem with any mathematical theory of nature; making this
 observation does not help to define an MWI. 
-So, however intended, the analogy does not seem helpful.\footnote{The points 
+So, however intended, the analogy does not seem helpful \footnote{The points 
 made in this paragraph are greatly elaborated in 
-pages 644-6 of reference \cite{stein}.}
-
+pages 644-6 of reference \cite{stein}.}.
 Finally, we note that Deutsch's main discussion involves thought
 experiments (Deutsch's experiments $2$ and $3$) whose outcome is quite
 uncertain. Deutsch assumes that ``quantum parallel processing''
@@ -1153,7 +1151,7 @@ define their physical theory.
 It seems that any such axioms must involve the extremely complicated notion
 of a measuring device, or that the physical reality they define will 
 be one without any notion of timelike trajectory (and so, as 
-Bell\cite{bell1,bell2} 
+Bell \cite{bell1,bell2} 
 has pointed out, not obviously consistent with special relativity), or both. 
 
 All of this suggests that Everett's original program has degenerated,  
@@ -1176,7 +1174,7 @@ weak aesthetic objections to, his program.  (Hence perhaps the
 otherwise inexplicable claim by one commentator that ``Avoiding this
 [prediction of multiple co-existing consciousnesses for a single
 observer] is their [Everett's opponents'] motivation for opposing
-Everett in the first place.''\cite{deutsch})
+Everett in the first place.'' \cite{deutsch})
 Secondly, MWI seem to offer the attractive prospect of using quantum
 theory to make cosmological predictions.  
 The trouble here is that if an MWI is ultimately incoherent and ill-founded,
@@ -1200,7 +1198,7 @@ interpretation with definite measurements arises from a deterministic
 wave function evolution which superimposes the state vectors of all possible
 measurements. 
 So we do not see how to make such a theory precise without assumptions such as
-those of de Broglie\cite{db} and Bohm,\cite{bohm} and are
+those of de Broglie \cite{db} and Bohm \cite{bohm},  and are
 not enthusiastic about the de Broglie-Bohm theory (for ultimately
 aesthetic reasons --- the theory gives a definite 
 physical interpretation for quantum mechanics,
@@ -1219,8 +1217,8 @@ Critics of MWI are often asked what alternative they propose.
 Of course the criticisms of MWI stand or fall
 on their own merits, but let us briefly outline our best guess at the
 actual status of quantum mechanics. 
-Similar views have been expressed by Leggett\cite{leggett} and 
-Penrose\cite{penrose} (among others) and in the references cited below. 
+Similar views have been expressed by Leggett \cite{leggett} and 
+Penrose \cite{penrose} (among others) and in the references cited below. 
 Our guess is that the postulates of standard quantum mechanics (I-V above)
 are not an ultimate description of nature; the ultimate description is
 given by postulates as yet unknown, which are probably framed in a
@@ -1241,10 +1239,10 @@ Very interesting models of possible
 sub-quantum physics, apparently consistent with known experiment and
 with all the properties required in
 the last paragraph, now exist.  The key idea for these models was put
-forward by Ghirardi-Rimini-Weber;\cite{grw} a very clear exposition and
-new interpretation of the mathematics has been presented by Bell;\cite{bell3}
+forward by Ghirardi-Rimini-Weber \cite{grw}; a very clear exposition and
+new interpretation of the mathematics has been presented by Bell \cite{bell3};
 a possible treatment of indistinguishability 
-has been given by Ghirardi et al.;\cite{gnrw} 
+has been given by Ghirardi et al. \cite{gnrw} ;
 our preferred interpretation, and a treatment of indistinguishability that
 does not jeopardize locality, can be found in reference \cite{ak}. 
 Whether these models (or later theoretical developments along similar
