--- a/gr-qc-9703089/gr-qc-9703089.tex
+++ b/gr-qc-9703089/gr-qc-9703089.tex
@@ -31,7 +31,7 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.7in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
@@ -598,7 +598,7 @@ does {\em not} follow from his assumptions.
 
 Graham's strategy is the following.  
 He considers an observable $X$ with eigenvalues $X_i$ ($i$ from $1$ to $n$),
-a large number $N >> n$ of identical systems on which $X$ is defined,
+a large number $N \gg n$ of identical systems on which $X$ is defined,
 and a macroscopic measuring device that measures the 
 {\em relative frequencies} of the various eigenvalues in the identical
 systems. 
@@ -616,12 +616,12 @@ mechanical assumption about the probability distribution for the initial
 What he assumes is that $\psi$ is constrained to lie in some finite
 ($n$-)dimensional space ${\cal H}$, and that the expansion
 \begin{equation}
-\psi = \sum_{j=1}^{n} <~\psi_j~,~\psi~> \psi_j
+\psi = \sum_{j=1}^{n} \langle\,\psi_j,\psi\rangle \psi_j
 \end{equation}
 of $\psi$ in an orthonormal basis $( \psi_j )$ for ${\cal H}$ defines 
 a statistical measure for $\psi$ as follows. 
 Graham sets 
-$<~\psi_j~,~\psi~> = x_j + i y_j$, and takes $(x_1 , \ldots , x_n , y_1 ,
+$\langle\,\psi_j,\psi\rangle = x_j + i y_j$, and takes $(x_1 , \ldots , x_n , y_1 ,
 \ldots , y_n )$ as coordinates on the $(2n - 1)$-sphere $S^{2n-1}$. 
 Now he defines the statistical measure $\lambda$ 
 for any set I of states as the ratio
@@ -876,7 +876,7 @@ postulate:
 \item[Postulate IV] If the state of the system is 
 described by the normalized vector $\ket{\psi}$, then a measurement of
 ${\cal O}$ will yield the value $\theta_i$ with probability $p_i = |
-<~\theta_i ~,~ \psi ~> |^2$.
+\langle\theta_i, \psi\rangle |^2$.
 \end{description} 
 and in omitting the projection (or state vector reduction) postulate:
 \begin{description}
@@ -918,7 +918,7 @@ where the vector $\ket{\psi}^{\infty}$ represents the infinite
 ensemble of systems all in the state $\ket{\psi}$, the frequency
 operator $F( \theta_i )$ is associated with the observable that
 describes the proportion of subsystems in the eigenstate
-$\ket{\theta_i}$, and $p_i = | <~\theta_i ~,~ \psi ~> |^2$.
+$\ket{\theta_i}$, and $p_i = | \langle\theta_i , \psi\rangle |^2$.
 
 In summary, one knows from empirical evidence that the probability of
 obtaining the result $\theta_i$ from a measurement of ${\textit O}$ on the
