--- a/helpers/fixarxiv-charter.tex
+++ b/helpers/fixarxiv-charter.tex
@@ -21,4 +21,5 @@ bookmarksopenlevel=10
 \usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
 \tolerance=2000
+\hbadness=2000
 \usepackage[small]{titlesec}
