bookmarks do not work

--- a/1507.05255/On_the_quantum_measurement_problem.tex
+++ b/1507.05255/On_the_quantum_measurement_problem.tex
@@ -1,8 +1,22 @@
-\documentclass[12pt,a4]{article}
+\documentclass[12pt]{article}
 \usepackage{atbegshi}% http://ctan.org/pkg/atbegshi
 \AtBeginDocument{\AtBeginShipoutNext{\AtBeginShipoutDiscard}}
 \usepackage[affil-it]{authblk}
 \usepackage{amsmath}%
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
 \usepackage[titletoc,toc,title]{appendix}
 \usepackage[ansinew]{inputenc}
@@ -18,21 +32,6 @@
 \newcommand{\unit}{1\!\!1}
 \usepackage[font={small}]{caption}
 
-\usepackage[colorlinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
-%\usepackage{amssymb}
-%\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
@@ -135,7 +134,7 @@ In this paper, I attempt a personal account of my understanding of the measureme
 
 %\maketitle
 \setcounter{page}{1}
-\subsection*{Two measurement problems}
+section*{Two measurement problems}
 
 There are at least two measurement problems in quantum mechanics\footnote{Two problems are assumed in Ref.~\cite{bub,pitowsky} and three problems are assumed in Ref.~\cite{maudlin}.}. The less prominent of the two (the ``small'' problem) is that of {\em explaining why a certain outcome -- as opposed to its alternatives -- occurs in a particular run of an experiment.} The bigger problem of the two (the ``big'' problem) is that of explaining the ways in which an experiment arrives at a particular outcome. It addresses the question of {\em what makes a measurement a measurement}\footnote{The proposed formulation of the two problems is inspired but not equivalent to the one of Ref.~\cite{bub,pitowsky} where the two categories of measurement problems were first introduced with the designations ``small'' and ``big''.}. 
 
